# ccmux

./: .gitignore  CLAUDE.md  README.md  TODO.md  ccmux.toml  ccmux.toml.example  pyproject.toml
adapters/wa_notifier/: __main__.py  classifier.py  config.py  notifier.py
adapters/wework_notifier/: __main__.py  config.py  crypto.py  server.py
adapters/zulip_adapter/: __main__.py  adapter.py  config.py  env_template.sh  file_handler.py  injector.py  process_mgr.py  transcript_watcher.py
ccmux/: __init__.py  config.py  daemon.py  detector.py  fifo.py  hook.py  hooks_manager.py  injector.py  lifecycle.py  mcp_server.py  paths.py  pending_tasks.py  pubsub.py  reconcile.py  watcher.py
docs/: acceptance-criteria.md  architecture-divergence.md  architecture-v2-multi-agent.md  deployment-plan.md  incident-report-20260304.md  spec.md  zulip-implementation-plan.md
docs/images/: gen_architecture.dot  gen_dataflow.dot
hooks/: pre-commit
libs/email/: gmail.py
libs/file_share/: __main__.py  server.py  share_manager.py  thumbnails.py
libs/pad_agent/: __init__.py  __main__.py  (+16 more)
scripts/: announcement.py  ccmux_init.py  daily_butler.py  explore_outlook_web.py  explore_parent_email.py  gmail_scanner.py  health_reminder.py  powerschool_checker.py  powerschool_explore.py  powerschool_fieldtrip_explorer.py  privacy_check.py  school_email_scanner.py  security_audit.py  security_audit.sh  security_cleanup.sh  startup_selfcheck.py  task_cost_report.py  usage_report.py  voice_bridge.py  voice_mode.sh  web_agent_integration_test.py  zulip_helpers.py  zulip_relay_hook.py
tests/: conftest.py
(+72 files in other folders)
