[project]
name = "ccmux"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "libtmux",
    "structlog",
    "watchdog",
    "mcp",
    "uvicorn",
    "starlette",
]

[project.scripts]
ccmux = "ccmux.daemon:main"
ccmux-wa-notifier = "adapters.wa_notifier.__main__:main"
ccmux-deploy = "ccmux.reconcile:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["ccmux*", "adapters*", "libs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_claude: requires real claude binary (skipped by default)",
]
